# opengl-boilerplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  minimal.cpp
CMakeModules/: app.plist.in
